InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProfilingSegment__c/vlocity_ins__ProfilingSegment__c.object-meta.xml
<CustomObject>
    <description>Profiling Segment ( similiar to Tag).</description>
    <label>Deprecated Profiling Segment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deprecated Profiling Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>