InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProfilingSegment__c/fields/vlocity_ins__AutoCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AutoCode__c</fullName>
    <displayFormat>SEGMENT-{0}</displayFormat>
    <label>Auto Code</label>
    <type>AutoNumber</type>
</CustomField>