InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProfilingSegment__c/fields/vlocity_ins__Filterable__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Filterable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this attribute should be displayed in Filter section</description>
    <label>Filterable</label>
    <type>Checkbox</type>
</CustomField>