InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProfilingSegment__c/fields/vlocity_ins__SegmentCategoryName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SegmentCategoryName__c</fullName>
    <formula>vlocity_ins__ProfSegCategory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Category Name</label>
    <type>Text</type>
</CustomField>